--- a/src/components/UiComponents/typography.scss
+++ b/src/components/UiComponents/typography.scss
@@ -4,7 +4,7 @@
 	font-family: 'Patrick Hand', cursive !important;
 	font-size: 3.75rem;
 	font-weight: 400;
-	color: $color-primary;
+	color: $color-primary-dark;
 	text-align: center;
 }
 
