--- a/public/base.css
+++ b/public/base.css
@@ -7,9 +7,11 @@
 }
 
 html {
-	font-size: 62.5%; /* 1rem = 10px */
+	/* font-size: 62.5%; 1rem = 10px */
+	font-size: 70%; /* 1rem = 11px */
 }
 
 body {
 	box-sizing: border-box;
+	overflow-x: hidden;
 }
