--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,5 +2,8 @@ $color-white: #fff;
 $color-black: #000;
 $color-primary: #6a5eb2;
 $color-primary-dark: #4f4389;
+$color-primary-light: #dce6f2;
+
+$border-radius-sm: 0.8rem;
 
 $shadow-primary: 3px 4px 4px rgba($color-black, 0.05);
