--- a/public/base.css
+++ b/public/base.css
@@ -15,3 +15,21 @@ body {
 	box-sizing: border-box;
 	overflow-x: hidden;
 }
+
+::-webkit-scrollbar {
+	width: 0.8rem;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: #6b5eb28f;
+	/* background-color: rgba(#6a5eb2, 0.4); */
+	border-radius: 0.5rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background-color: #6b5eb2dc;
+}
+
+::-webkit-scrollbar-thumb:active {
+	background-color: #6b5eb2c7;
+}
