--- a/src/components/layout/nav/nav.scss
+++ b/src/components/layout/nav/nav.scss
@@ -9,11 +9,12 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	padding: 0.5rem;
+	padding: 0.5rem 8rem;
 
 	&__logo {
 		height: 9rem;
 		width: 9rem;
+		transform: translateX(-1rem);
 
 		img {
 			height: 100%;
@@ -23,7 +24,6 @@
 }
 
 .nav-list {
-	width: 33%;
 	display: flex;
 	align-items: center;
 	justify-content: auto;
