--- a/src/components/pages/home/hero/hero.scss
+++ b/src/components/pages/home/hero/hero.scss
@@ -1,11 +1,12 @@
 .hero-section {
 	display: flex;
 	align-items: center;
-	justify-content: space-around;
-	margin-top: 2.25rem;
+	justify-content: space-between;
+	margin-top: 5rem;
+	padding: 0 8rem;
 
 	&__img {
-		height: 40rem;
+		height: 50rem;
 
 		img {
 			height: 100%;
@@ -30,6 +31,6 @@
 	&__btn {
 		align-self: flex-end;
 		margin-top: 2rem !important;
-		margin-right: 4rem !important;
+		margin-right: 2rem !important;
 	}
 }
