--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,7 +4,10 @@ $color-primary: #6a5eb2;
 $color-primary-dark: #4f4389;
 $color-primary-light: #dce6f2;
 
+$color-secondary-light: #f2f9ff;
+
 $border-radius-sm: 0.8rem;
+$border-radius-md: 2rem;
 
 $shadow-primary: 3px 4px 4px rgba($color-black, 0.05);
-
+$shadow-secondary: 2px 2px 4px 4px rgba($color-black, 0.05);
