smooth scroll to class section on clicking explore in home page

--- a/src/components/pages/home/hero/hero.scss
+++ b/src/components/pages/home/hero/hero.scss
@@ -29,6 +29,7 @@
 	}
 
 	&__btn {
+		text-decoration: none;
 		align-self: flex-end;
 		margin-top: 2rem !important;
 		margin-right: 2rem !important;
