--- a/src/components/UiComponents/btn.scss
+++ b/src/components/UiComponents/btn.scss
@@ -5,5 +5,5 @@
 	color: $color-white !important;
 	text-transform: none !important;
 	font-size: 1.5rem !important;
-	padding: .5rem 2rem !important;
+	padding: 0.5rem 2rem !important;
 }
