--- a/src/components/pages/home/connect/connect.scss
+++ b/src/components/pages/home/connect/connect.scss
@@ -1,7 +1,7 @@
 @import '../../../../styles/variables';
 
 .connect-section {
-	margin-top: 10rem;
+	margin: 10rem 0;
 	padding: 0 8rem;
 
 	&__container {
