--- a/src/components/pages/signup/form.scss
+++ b/src/components/pages/signup/form.scss
@@ -1,4 +1,5 @@
 @import '../../../styles/variables';
+@import '../../../styles/utilities';
 
 .signup-section {
 	display: flex;
@@ -36,5 +37,9 @@
 		label {
 			background-color: $color-secondary-light-1;
 		}
+	}
+
+	&__alert {
+		margin-bottom: 2rem !important;
 	}
 }
