Card for content page completed

--- a/public/base.css
+++ b/public/base.css
@@ -12,6 +12,12 @@ html {
 	scroll-behavior: smooth;
 }
 
+@media screen and (max-width: 1500px) {
+	html {
+		font-size: 60%;
+	}
+}
+
 body {
 	box-sizing: border-box;
 	overflow-x: hidden;
