created contact us page

--- a/src/components/layout/footer/footer.scss
+++ b/src/components/layout/footer/footer.scss
@@ -34,6 +34,11 @@
 			cursor: pointer;
 			transition: all 0.3s;
 
+			a {
+				text-decoration: none;
+				color: currentColor;
+			}
+
 			&:hover {
 				color: $color-primary;
 				transform: translateY(-0.2rem);
