--- a/src/components/layout/nav/nav.scss
+++ b/src/components/layout/nav/nav.scss
@@ -21,6 +21,10 @@
 			width: 100%;
 		}
 	}
+
+	&__link {
+		text-decoration: none;
+	}
 }
 
 .nav-list {
@@ -49,30 +53,30 @@
 			fill: currentColor;
 			margin-left: 0.25rem;
 		}
+	}
 
-		ul {
-			margin-top: 1rem;
-			position: absolute;
-			width: 100%;
-			text-align: center;
-			color: $color-black;
-			background-color: $color-white;
-			list-style: none;
-			box-shadow: $shadow-primary;
+	&__dropdown {
+		margin-top: 1rem;
+		position: absolute;
+		width: 100%;
+		text-align: center;
+		color: $color-black;
+		background-color: $color-white;
+		list-style: none;
+		box-shadow: $shadow-primary;
 
-			li {
-				&:first-child {
-					margin-top: 0;
-				}
+		&-item {
+			&:first-child {
+				margin-top: 0;
+			}
 
-				margin-top: 0.25rem;
-				padding: 0.25rem 0.5rem;
-				transition: all 0.2s;
+			margin-top: 0.25rem;
+			padding: 0.25rem 0.5rem;
+			transition: all 0.2s;
 
-				&:hover {
-					background-color: rgba($color-black, 0.03);
-					color: $color-primary;
-				}
+			&:hover {
+				background-color: rgba($color-black, 0.03);
+				color: $color-primary;
 			}
 		}
 	}
