--- a/src/components/pages/home/class/class.scss
+++ b/src/components/pages/home/class/class.scss
@@ -5,6 +5,11 @@
 	padding: 4rem 8rem;
 	background-color: $color-secondary-light-1;
 
+	&__link {
+		text-decoration: none;
+		color: currentColor;
+	}
+
 	&__class {
 		margin-top: 5rem;
 		display: grid;
