--- a/src/components/pages/content/ncertSolutions/ncertSolutions.scss
+++ b/src/components/pages/content/ncertSolutions/ncertSolutions.scss
@@ -12,7 +12,7 @@
 
 .section-ncert-solutions {
 	padding: 0 8rem;
-	margin: 4rem 0rem;
+	margin: 4rem 0;
 	&__background {
 		width: 80%;
 		margin-top: 2rem;
