--- a/src/components/layout/nav/nav.scss
+++ b/src/components/layout/nav/nav.scss
@@ -36,6 +36,7 @@
 	&__item {
 		position: relative;
 		cursor: pointer;
+		width: max-content;
 		transition: all 0.3s;
 		font-size: 1.7rem;
 		margin-right: 2rem;
@@ -58,7 +59,9 @@
 	&__dropdown {
 		margin-top: 1rem;
 		position: absolute;
-		width: 100%;
+		width: 10rem;
+		left: 50%;
+		transform: translateX(-50%);
 		text-align: center;
 		color: $color-black;
 		background-color: $color-white;
@@ -66,6 +69,8 @@
 		box-shadow: $shadow-primary;
 
 		&-item {
+			border-bottom: 0.5px solid $color-primary;
+
 			&:first-child {
 				margin-top: 0;
 			}
@@ -73,6 +78,12 @@
 			margin-top: 0.25rem;
 			padding: 0.25rem 0.5rem;
 			transition: all 0.2s;
+
+			a {
+				text-decoration: none;
+				color: currentColor;
+				width: 100%;
+			}
 
 			&:hover {
 				background-color: rgba($color-black, 0.03);
