--- a/public/base.css
+++ b/public/base.css
@@ -7,14 +7,14 @@
 }
 
 html {
-	/* font-size: 62.5%; 1rem = 10px */
 	font-size: 70%; /* 1rem = 11px */
+
 	scroll-behavior: smooth;
 }
 
 @media screen and (max-width: 1500px) {
 	html {
-		font-size: 60%;
+		font-size: 62.5% !important; /* 1rem = 10px */
 	}
 }
 
