--- a/src/components/pages/content/pyq/pyq.scss
+++ b/src/components/pages/content/pyq/pyq.scss
@@ -1,3 +1,4 @@
+@import '../../../../styles/mixins';
 @import '../../../../styles/variables';
 
 .chapter-name {
@@ -11,7 +12,8 @@
 }
 
 .section-pyqs {
-	padding: 0 8rem;
+	@include section-padding;
+
 	margin: 4rem 0;
 
 	&__background {
