--- a/public/base.css
+++ b/public/base.css
@@ -18,6 +18,24 @@ html {
 	}
 }
 
+@media screen and (max-width: 1100px) {
+	html {
+		font-size: 56% !important; /* 1rem = 9px */
+	}
+}
+
+@media screen and (max-width: 800px) {
+	html {
+		font-size: 50% !important; /* 1rem = 8px */
+	}
+}
+
+@media screen and (max-width: 400px) {
+	html {
+		font-size: 37% !important; /* 1rem = 6px */
+	}
+}
+
 body {
 	box-sizing: border-box;
 	overflow-x: hidden;
