--- a/src/components/UiComponents/card.scss
+++ b/src/components/UiComponents/card.scss
@@ -49,7 +49,11 @@
 	}
 
 	@media screen and (max-width: 1400px) {
-		padding: 1rem;
+		padding: 2rem;
+	}
+
+	@media screen and (max-width: 700px) {
+		padding: 2rem 5rem;
 	}
 
 	&__para {
@@ -57,6 +61,10 @@
 		text-align: left !important;
 		width: 40ch;
 		margin-top: 1.5rem !important;
+
+		@media screen and (max-width: 1100px) {
+			width: 30ch;
+		}
 	}
 }
 
