--- a/src/components/UiComponents/card.scss
+++ b/src/components/UiComponents/card.scss
@@ -77,6 +77,18 @@
 	cursor: pointer;
 	transition: all 0.5s;
 
+	@media screen and (max-width: 1400px) {
+		width: 60ch;
+	}
+
+	@media screen and (max-width: 1000px) {
+		width: 55ch;
+	}
+
+	@media screen and (max-width: 700px) {
+		padding: 2rem 5rem;
+	}
+
 	&:hover {
 		transform: scale(1.05) translateY(-0.5rem);
 	}
