--- a/src/components/pages/home/class/class.scss
+++ b/src/components/pages/home/class/class.scss
@@ -15,20 +15,6 @@
 	}
 
 	&__class {
-		margin-top: 5rem;
-		display: grid;
-		grid-gap: 5rem;
-		justify-items: center;
-		grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
-
-		@media screen and (max-width: 1445px) {
-			grid-gap: 3rem;
-			grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-		}
-
-		@media screen and (max-width: 700px) {
-			grid-gap: 3rem;
-			grid-template-columns: repeat(1, 1fr);
-		}
+		@include grid-3-column;
 	}
 }
