--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -13,3 +13,21 @@
 @mixin section-margin {
 	margin-top: 10rem;
 }
+
+@mixin grid-3-column {
+	display: grid;
+	grid-gap: 5rem;
+	justify-items: center;
+	grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
+	margin-top: 5rem;
+
+	@media screen and (max-width: 1445px) {
+		grid-gap: 3rem;
+		grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+	}
+
+	@media screen and (max-width: 700px) {
+		grid-gap: 3rem;
+		grid-template-columns: repeat(1, 1fr);
+	}
+}
