--- a/src/components/pages/home/hero/hero.scss
+++ b/src/components/pages/home/hero/hero.scss
@@ -9,8 +9,24 @@
 	justify-content: space-between;
 	margin-top: 5rem;
 
+	@media screen and (max-width: 540px) {
+		flex-direction: column;
+	}
+
 	&__img {
 		height: 50rem;
+
+		@media screen and (max-width: 1000px) {
+			height: 40rem;
+		}
+
+		@media screen and (max-width: 850px) {
+			height: 35rem;
+		}
+
+		@media screen and (max-width: 540px) {
+			align-self: flex-start;
+		}
 
 		img {
 			height: 100%;
@@ -22,6 +38,18 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
+
+		@media screen and (max-width: 540px) {
+			align-self: flex-end;
+			margin-right: 2rem;
+			margin-top: 2rem;
+		}
+	}
+
+	&__heading {
+		@media screen and (max-width: 700px) {
+			font-size: 4rem !important;
+		}
 	}
 
 	&__heading {
