--- a/src/components/pages/home/testimonials/testimonials.scss
+++ b/src/components/pages/home/testimonials/testimonials.scss
@@ -11,6 +11,10 @@
 
 	&__stars {
 		margin-top: 2rem !important;
+
+		@media screen and (max-width: 700px) {
+			text-align: center;
+		}
 	}
 
 	&__star {
@@ -27,5 +31,9 @@
 
 	&__name {
 		margin-top: 2rem;
+
+		@media screen and (max-width: 700px) {
+			text-align: center;
+		}
 	}
 }
