--- a/public/base.css
+++ b/public/base.css
@@ -8,7 +8,7 @@
 
 html {
 	font-size: 70%; /* 1rem = 11px */
-	-webkit-tap-highlight-color: #00000000;
+	-webkit-tap-highlight-color: #0000;
 	scroll-behavior: smooth;
 }
 
