--- a/src/components/layout/footer/footer.scss
+++ b/src/components/layout/footer/footer.scss
@@ -6,12 +6,21 @@
 	background-color: $color-secondary-light-1;
 	padding: 3rem 8rem;
 
+	@media screen and (max-width: 540px) {
+		flex-direction: column;
+		align-items: center;
+	}
+
 	/* ---------------------------------- left ---------------------------------- */
 
 	&__left {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+
+		@media screen and (max-width: 540px) {
+			margin-bottom: 2rem;
+		}
 	}
 
 	&__logo {
@@ -22,12 +31,25 @@
 	&__para {
 		width: 40ch;
 		text-align: left !important;
+
+		@media screen and (max-width: 690px) {
+			width: 30ch;
+		}
+
+		@media screen and (max-width: 540px) {
+			width: 40ch;
+			text-align: center !important;
+		}
 	}
 
 	/* ----------------------------------- mid ---------------------------------- */
 
 	&__nav {
 		list-style: none;
+
+		@media screen and (max-width: 540px) {
+			margin-bottom: 2rem;
+		}
 
 		&-item {
 			font-size: 2rem;
