--- a/src/components/layout/footer/footer.scss
+++ b/src/components/layout/footer/footer.scss
@@ -85,11 +85,19 @@
 		flex-direction: column;
 		align-items: center;
 
+		@media screen and (max-width: 540px) {
+			flex-direction: row;
+		}
+
 		svg {
 			height: 3rem;
 			width: 3rem;
 			cursor: pointer;
 			transition: all 0.3s;
+
+			@media screen and (max-width: 540px) {
+				margin-right: 2rem;
+			}
 
 			&:hover {
 				fill: $color-primary;
@@ -99,6 +107,10 @@
 
 			&:not(:last-of-type) {
 				margin-bottom: 2rem;
+
+				@media screen and (max-width: 540px) {
+					margin-bottom: 0;
+				}
 			}
 		}
 	}
