--- a/src/components/pages/content/ncertSolutions/ncertSolutions.scss
+++ b/src/components/pages/content/ncertSolutions/ncertSolutions.scss
@@ -17,6 +17,12 @@
 
 	margin: 4rem 0;
 
+	@media screen and (max-width: 540px) {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+
 	&__background {
 		width: 80%;
 		margin-top: 2rem;
