--- a/src/components/pages/content/pyq/pyq.scss
+++ b/src/components/pages/content/pyq/pyq.scss
@@ -17,6 +17,12 @@
 
 	margin: 4rem 0;
 
+	@media screen and (max-width: 540px) {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+
 	&__background {
 		width: 80%;
 		margin-top: 2rem;
@@ -35,7 +41,7 @@
 		color: $color-primary !important;
 		font-size: 1.5rem !important;
 	}
-	
+
 	ul {
 		margin-top: 4rem;
 	}
