--- a/src/components/pages/myAccount/myAccount.scss
+++ b/src/components/pages/myAccount/myAccount.scss
@@ -65,19 +65,42 @@
 }
 
 .my-account-section-form {
+	@media screen and (max-width: 540px) {
+		width: 80%;
+	}
+
 	div {
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
 		width: 100%;
+
+		@media screen and (max-width: 540px) {
+			flex-direction: column;
+			justify-content: center;
+			padding: 0 1rem !important;
+		}
 	}
 
 	&__input {
+		@media screen and (max-width: 540px) {
+			margin-top: 2rem !important;
+		}
+
 		&:not(:last-of-type) {
 			margin-right: 2rem !important;
+
+			@media screen and (max-width: 540px) {
+				margin-right: 0 !important;
+			}
+		}
+
+		input {
+			font-size: 2rem !important;
 		}
 
 		label {
+			font-size: 2rem !important;
 			background-color: $color-white !important;
 		}
 	}
@@ -93,4 +116,8 @@
 	&__btn {
 		margin-top: 2rem !important;
 	}
+}
+
+.MuiMenuItem-root {
+	font-size: 2rem !important;
 }
